# madan_ai_demo

./: .gitignore  README.md  bricks_conf.json  dashboard_renew_portfolio_exec.lvdash.json  databricks.yml  generate_data.py  transformations.sql
app/: app.py  app.yaml  pyproject.toml  requirements.txt
app/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
app/frontend/src/: App.tsx  index.css
app/frontend/src/components/: Chat.tsx  Dashboard.tsx
app/server/: config.py
app/server/routes/: chat.py
